--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "express": "^4.14.1",
     "socket.io": "^1.7.3",
+	"sqlite3": "^3.1.13",
     "sweetalert": "^2.0.3",
     "sweetalert2": "^6.9.1",
     "papaparse": "^4.3.6",
